maple-core-macro/tests/ui/element-fail.stderr
error: unexpected token
 --> $DIR/element-fail.rs:4:18
  |
4 |     template! { p.my-class#id };
  |                  ^

error: expected `=`
 --> $DIR/element-fail.rs:6:23
  |
6 |     template! { button(disabled) };
  |                       ^^^^^^^^^^

error: expected `=`
 --> $DIR/element-fail.rs:7:23
  |
7 |     template! { button(on:click) };
  |                       ^^^^^^^^^^

error: expected `=`
 --> $DIR/element-fail.rs:9:25
  |
9 |     template! { button(a.b.c="123") };
  |                         ^
